# sauvc-simulations

./: README.md
auv_d/: CMakeLists.txt  package.xml
auv_d/config/: auv_d.yaml  urdf.rviz
auv_d/launch/: auv_d_gazebo.launch  display-rviz.launch
auv_d/meshes/: base_link.STL
auv_d/src/: auv_d_key_control.cpp
auv_d/sw_files/: auv_d-assembly.SLDASM  body.SLDPRT
auv_d/urdf/: auv_d.xacro
auv_d/worlds/: my_world.world  underwater.world
auv_simulation/: CMakeLists.txt  package.xml
auv_simulation/config/: urdf.rviz
auv_simulation/launch/: auv.launch  display-rviz.launch  gazebo.launch
auv_simulation/meshes/: base_link.STL  base_link_collision.STL  port_rail.STL  port_rail_collision.STL  star_rail.STL  star_rail_collision.STL  thruster_1_collision.STL  thruster_1_mount.STL  thruster_1_mount_collision.STL  thruster_2_collision.STL  thruster_2_mount.STL  thruster_2_mount_collision.STL  thruster_3_collision.STL  thruster_3_mount.STL  thruster_3_mount_collision.STL  thruster_4_collision.STL  thruster_4_mount.STL  thruster_4_mount_collision.STL  thruster_5_collision.STL  thruster_5_mount.STL  thruster_5_mount_collision.STL  thruster_6_collision.STL  thruster_6_mount.STL  thruster_6_mount_collision.STL  weight.STL
auv_simulation/sw_files/: hull_collision.sldprt  port_rail.sldprt  star_rail.sldprt  thruster_1.sldprt  thruster_1_mount.sldprt  thruster_6.sldprt  thruster_6_mount.sldprt  weight_collision.sldprt
auv_simulation/urdf/: auv.xacro
auv_simulation/worlds/: my_world.world  ocean_world.world
docs/: DSO-Test-1.md  DSO-Test-2.md  Home.md  Notes-on-understanding-DSO.md  On-SLAM-algorithms.md  On-VO.md  On-thruster-configuration.md  References.md  Setting-up-darknet.md  Underwater-SLAM-Scenario.md  Using-DSO.md  auv_d.md  auv_simulation.md  v2_control.md  v2_dataset.md  v2_utility.md  v2_visual.md
v2_control/: CMakeLists.txt  package.xml
v2_control/include/: README.md  config_UWV.h  hard_uwv.h  pid_rotate.h  pid_translate.h  soft_uwv.h  stoppable_thread.h  uwv.h
v2_control/launch/: auv_sensors.launch  process_vision.launch  sauvc.launch
v2_control/scripts/vision/: CMakeLists.txt  dwn_vision.py  front_vision.py
v2_control/src/: key-control.cpp
v2_control/src/common/: README.md  pid_rotate.cpp  pid_translate.cpp  uwv.cpp
v2_control/src/rov_ctrl/: CMakeLists.txt  README.md  config_ROV.h  rov_ctrl.cpp  rov_ctrl.h
v2_control/src/sauvc_tasks/: CMakeLists.txt  README.md  all_tasks.cpp  auv.h  config_AUV.h  move.h  task.cpp  task.h  task_1.h
v2_control/src/validate_gate/: task_1_v1.py  validate_gate.py
v2_dataset/: CMakeLists.txt  package.xml
v2_dataset/imgs/: cam_calib_dso.txt  rename_img.py
v2_utility/: CMakeLists.txt  package.xml
v2_utility/camera_info/: cam_calib.txt
v2_utility/launch/: get_images.launch
v2_utility/src/loc_sensors/: CMakeLists.txt  loc_sensors.cpp  sensor_math.h
v2_utility/src/plugin_depth_sensor/: CMakeLists.txt  plugin_depth.cpp  plugin_depth.h
v2_visual/: CMakeLists.txt  package.xml
v2_visual/config/: sauvc-game.rviz  sim_viz.rviz  urdf.rviz
v2_visual/launch/: display-rviz.launch  pool-display.launch  sauvc-game.launch
v2_visual/meshes/: gripper_base_visual.STL  gripper_left_arm.STL  gripper_left_shoulder.STL  gripper_right_arm.STL  gripper_right_shoulder.STL
v2_visual/models/sauvc_pool/: model.config
v2_visual/models/start_point/: model.config  model.sdf
v2_visual/sw_files/Start-Point/: start.SLDPRT
v2_visual/sw_files/Task-1/: Assem.SLDASM  flare.SLDPRT  side.SLDPRT  top.SLDPRT
v2_visual/sw_files/Task-2_3/: Assem1.SLDASM  mat.SLDPRT  tub.SLDPRT
v2_visual/sw_files/Task-4/: Assem3.SLDASM  flare_4.SLDPRT  golf_ball.SLDPRT  pinger.SLDPRT
v2_visual/sw_files/auv_v2/: thruster_2.sldprt  thruster_2_mount.sldprt  thruster_3.sldprt  thruster_3_mount.sldprt  thruster_4.sldprt  thruster_4_mount.sldprt  thruster_5.sldprt  thruster_5_mount.sldprt
v2_visual/urdf/: auv_v2.xacro  q_gate.xacro  start_point.xacro  task1_flare.xacro  task1_gate.xacro  task2_mat.xacro  task4_ball.xacro  task4_no_pinger.xacro  task4_pinger.xacro
v2_visual/worlds/: sauvc_pool.world
