<?xml version="1.0"?>
<package format="2">
  <name>v2_utility</name>
  <version>0.1.1</version>
  <description>
    This package contains utility files like multimedia, plugins,
    custom msgs, etc required by v2_control package.
  </description>

  <author email="auv.society@iiitdm.ac.in">Mate</author>

  <maintainer email="auv.society@iiitdm.ac.in">Mate</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>


  <export>
    <gazebo_ros plugin_path="${prefix}/plugins"/>
  </export>

</package>
